# AFEM

./: .env  .gitignore  README.md  config.py  db.py  pyproject.toml  requirements.txt
afem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/: __init__.py  langgraph_agent.py
agent/prompts/: system_prompt.txt
agent/tools/: __init__.py  create_draft.py  retrieve_email.py  search_email.py  send_email.py
attribution/: __init__.py  authorization.py  confidence.py  engine.py  injection.py  rules.py
collector/: __init__.py  collector.py
data/evidence/sessions/: 1364df5d-7d56-42be-9bc2-da509f5aba9f.jsonl  255ffd5c-9dc5-4e32-a5e1-2111d8d6aa2e.jsonl  4ad81cb2-dd2a-4b40-9bbe-c42b21872e63.jsonl  5025e122-07d1-432e-be37-7abc7ecf9085.jsonl  86ab1fd7-32e4-47b7-a035-5301e2307aa2.jsonl  9289ef6a-f3cb-4939-9fa6-2b91aa2cb39e.jsonl  (+5 more)
db/: schema.sql
integrity/: __init__.py  hash_chain.py  sealer.py  verifier.py
reconstruction/: __init__.py  timeline.py
reporting/: investigation.py
schemas/: __init__.py  attribution.py  email.py  evidence.py  integrity.py  investigation.py  report.py
scripts/: attribute_session.py  build_mailbox.py  generate_investigation_report.py  reconstruct_timeline.py  run_agent.py  run_injection_evaluation.py  run_injection_resistance_evaluation.py  run_scope_evaluation.py  verify_mailbox.py  verify_session.py
tests/: __init__.py  test_agent.py  test_attribution.py  test_collector.py  test_integrity.py  test_investigation.py  test_schemas.py  test_search_result.py  test_timeline.py  test_tools.py
