[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afem"
version = "0.1.0"
description = "Agentic Forensic Evidence Model — research prototype"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests*",
    "scripts*",
    "data*",
    "logs*",
    "db*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"